Commons: - Added to TaskManager the capability to interrupt running Tasks execution on configuration reloading.   Modified TaskManager in order to append to Scheduler's Threads name also the executing TaskGroup.TaskName in order to simplify troubleshooting. - Corrected JSON<->XML numeric values conversion. - Removed XPath engine re-initialization during startup. - Removed recursive invocation of JMXEntrypoint.init() during Initializers execution. - Improved (N)CLOB fields management in sqlX metadata. - Improved reload configuration locking in order to avoid dead-lock. - Improved JMX entry-point initialization.
Core:
- Corrected @loggerLevel handling in GVCoreCallNode, GVIteratorOperationNode/CoreCall and parallel nodes
- Added to GVCoreCallNode and GVIteratorOperationNode/CoreCall a new attibute change-log-master-service.
  If true change the log master service with the used one (configured or calculated), in order to write log messages into a different log file.
  Used only if @change-log-context is true.
- Improved init/run logging of ServiceCallerTask.NextAction status
- Corrected GVCore pool element clean-up after configuration reload.
- Moved to INFO level the end trace message of workflow nodes, added execution time in ms.
- Enabled missing FTPS remote manager in dtds
- Improved fail-fast capability on XA abort in transacted workflows execution
- Improved transaction error management in workflow engine
- Corrected GVSubFlowCallNode @dynamic behavior
- Modified Core's configuration reload management, in order to better handle already running service instances.
- Added ACL check to GVCoreCallNode and IteratorController in order to enforce ACL check across flow calls.
- Added Input/Output services support to GVSubFlow* and GVCoreCallNode nodes.
- Added JMX interface to subflows (statistics and executing instances status)
- Added support to interruptible services
    - Added JMX operations that enables the interruption of Operations and/or SubFlows (by ID and Thre